# crumb-format

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLEANUP_PLAN.md  CODEX_HANDOFF_0.4.0.crumb  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY_NOW.md  DREAMING.md  FAQ.md  LICENSE  README.md  RELEASE_NOTES_0.2.1_DRAFT.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.4.0_DRAFT.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  SECURITY.md  SPEC.md  TRADEMARK.md  action.yml  brain_bridge_cli.py  capsule_cli.py  constraints.txt  crumb_cli.py  posts.md  pyproject.toml  requirements-dev.txt
.crumb/: latest.crumb
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-crumb-pr.yml  auto-crumb-template.yml  bench-pr.yml  bench-template.yml  build-studio.yml  publish-clawhub.yml  publish-pypi.yml  shadow-ai-scan.yml  (+2 more)
Formula/: crumb-format.rb  crumb.rb
a2a/: README.md  agent_card.py  server.py  task_handler.py
agentauth/: __init__.py  audit.py  credentials.py  decorators.py  passport.py  policy.py  store.py  webhooks.py
api/: README.md  openapi.json  openapi.yaml  server.py
browser-extension/: INSTALL.md  README.md  background.js  content.js  generate_icons.py  manifest.json  metalk-data.json  metalk.js  popup.html  popup.js
clawhub-skill/: README.md  SKILL.md  openclaw.plugin.json
cli/: agent.py  agent_integrity.py  bridge.py  capsule_tools.py  classify.py  crumb.py  deadlines.py  delta.py  errors.py  extensions.py  failure_modes.py  guardrails.py  halo_bridge.py  handoff.py  hashing.py  linting.py  local_ai.py  memory_bridge.py  mempalace_bridge.py  metalk.py  pack.py  palace.py  ref_resolver.py  reflect.py  squeeze.py  vowelstrip.py
crumbs/: map.crumb  mem.crumb
demo/: BEFORE_AFTER_DEMO.md
docs/: AGENT_HANDOFFS.md  AGENT_INTEGRITY.md  BRIDGES.md  CAPSULES_RELAY_BRAIN.md  CLI.md  COMPATIBILITY.md  CRUMB_STUDIO.md  CRUMB_vs_AGENTS_MD.md  CRUMB_vs_CLAUDE_MD.md  HANDOFF_PATTERNS.md  HOMEBREW.md  LAUNCH_POSTS.md  PACKS.md  PROTOCOL.md  QUICKSTART.md  RECONCILIATION.md  RELEASING.md  SECURITY.md  STABILITY.md  THREAT_MODEL.md  v1.2-fold-heuristic.md  v1.2-ref-resolution.md  v1.3-DRAFT.md  v1.4-scoping.md  vowel-drift-benchmark.md  vowel-drift.md
examples/: README.md  agent_experiment.json  halo-trace-to-log.crumb  lifecycle-demo.md  log-deployment.crumb  map-client-takeover.crumb  map-repo-onboarding.crumb  mem-caveman-prompt.crumb  mem-mempalace-auth-migration.crumb  mem-terse-output.crumb  mem-user-preferences.crumb  metalk-demo.md  task-bug-fix.crumb  task-content-repurpose-handoff.crumb  task-cross-tool-feature-handoff.crumb  task-feature-continuation.crumb  task-launch-crumb-capsules.crumb  task-packed-auth-context.crumb  todo-sprint.crumb  v12-content-ref.crumb  v12-delta.crumb  v12-fold.crumb  v12-handoff.crumb  v12-priority.crumb  v12-refs.crumb  v12-typed-content.crumb  v13-agent.crumb  v13-checks.crumb  v13-fold-priority.crumb  v13-guardrails.crumb  v13-handoff-deps.crumb  v13-script.crumb  v13-workflow.crumb  v14-handoff-deadlines.crumb  v14-release-gate.crumb  v14-typed-checks.crumb  wake-session.crumb
fixtures/: manifest.json
mcp/: README.md  __init__.py  agentauth_server.py  server.py
patches/: cli_crumb_agent.patch
posts/: HN.md  LINKEDIN.md  README.md  REDDIT.md  X.md
prompts/: chatgpt_custom_instructions.md  claude_projects.md  cursor_rules.md
schemas/: crumb.schema.json
scripts/: bootstrap_update.py  export_metalk_data.py  measure_drift.py  publish.sh  run_web_generator.js  screenshot_extension.js  screenshot_playground.js
studio/: __init__.py  app.py  engine.py  history.py
tests/: test_agent_integrity.py  test_agentauth.py  test_browser_regression.py  test_capsule_tools_smoke.py  test_classify.py  test_cli_reference.py  test_crumb.py  test_deadlines.py  test_errors.py  test_failure_modes.py  test_guardrails.py  test_halo_bridge.py  test_handoff.py  test_js_port.py  test_metalk.py  test_palace.py  test_playground.py  test_protocol_features.py  test_reflect.py  test_roundtrip_and_fuzz.py  test_schema.py  test_squeeze.py  test_studio.py  test_usability.py  test_user_friendly.py  test_v13.py  test_v14_normative.py  test_validate_js_deadlines.py  test_vowelstrip.py  test_web_generator.py
tools/: generate_cli_reference.py
validators/: validate.js  validate.py
vscode-extension/: README.md  package.json
web/: index.html  playground.html
(+84 files in other folders)
