[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crumb-format"
version = "0.6.0"
description = "The copy-paste AI handoff format — v=1.1 spec frozen with formal ABNF, 20 conformance fixtures, property-based parser fuzzing, threat model, tooling stability policy, and a multi-agent handoff layer (orchestration + debate + Python helpers). Includes MeTalk compression, pack/lint/mempalace bridges, REST/A2A bridges, and AgentAuth identity, governance, and audit."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "XIO AI Solutions" }]
keywords = ["ai", "handoff", "llm", "context", "prompt-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/XioAISolutions/crumb-format"
Repository = "https://github.com/XioAISolutions/crumb-format"

[project.optional-dependencies]
test = [
    "pytest>=8.0,<10",
    "hypothesis>=6.100,<7",
]
dev = [
    "pytest>=8.0,<10",
    "hypothesis>=6.100,<7",
]

[project.scripts]
crumb = "crumb_cli:main"
agentauth-mcp = "mcp.agentauth_server:main"

[tool.setuptools]
py-modules = ["crumb_cli"]
packages = ["cli", "agentauth", "mcp", "api", "a2a"]

[tool.pytest.ini_options]
testpaths = ["tests"]
