[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crumb-format"
version = "0.4.0"
description = "The copy-paste AI handoff format — v1.2 with cross-crumb refs, foldable sections, handoff primitive, and typed content annotations. MeTalk compression, pack/lint/mempalace bridges, REST/A2A bridges, fixture conformance, and AgentAuth identity, governance, and audit included."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "XIO AI Solutions" }]
keywords = ["ai", "handoff", "llm", "context", "prompt-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2",
]

[project.urls]
Homepage = "https://github.com/XioAISolutions/crumb-format"
Repository = "https://github.com/XioAISolutions/crumb-format"

[project.scripts]
crumb = "crumb_cli:main"
agentauth-mcp = "mcp.agentauth_server:main"

[tool.setuptools]
py-modules = ["crumb_cli"]
packages = ["cli", "agentauth", "mcp", "api", "a2a"]

[tool.pytest.ini_options]
testpaths = ["tests"]
