[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crumb-format"
version = "0.6.0"
description = "The copy-paste AI handoff format — v1.3 wire format with kind=agent personas, [handoff] dependencies, [workflow] state machines, [guardrails]/[capabilities]/[script]/[checks] sections, structured [constraints], and normative ref resolution. Plus v1.2 efficiency layers (squeeze, sha256 refs, delta crumbs, priority folds), MeTalk compression, pack/lint/mempalace bridges, REST/A2A bridges, and AgentAuth identity/governance/audit."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "XIO AI Solutions" }]
keywords = ["ai", "handoff", "llm", "context", "prompt-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/XioAISolutions/crumb-format"
Repository = "https://github.com/XioAISolutions/crumb-format"

[project.scripts]
crumb = "crumb_cli:main"
agentauth-mcp = "mcp.agentauth_server:main"

[tool.setuptools]
py-modules = ["crumb_cli"]
packages = ["cli", "agentauth", "mcp", "api", "a2a"]

[tool.pytest.ini_options]
testpaths = ["tests"]
